# concordance-2

./: .gitignore  Dockerfile  FOUNDATION.md  PORT_PLAN.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
data/: keystone_bridges.jsonl  keystone_seeds.jsonl  nesting_bridges.jsonl  nesting_seeds.jsonl  reference_bridges.jsonl  reference_cards.jsonl
deploy/: Caddyfile  README.md  nh-com-2.service  nh-com.service  nh-org.service  nh-traffic.service  nh-traffic.timer
deploy/mcp-registry/: README.md  server.json
docs/: CORE_USER.md  CUTOVER.md  DEPLOY.md  DOOR.md  GATEWAY.md  PARITY_MATRIX.md  PLAN_2.0.md  RUNBOOK.md  SELF_HOST.md  THEORY_CATALOG.md  THE_COMPANION.md  V2_DEFINITION.md  VISION_PLAN.md  WITNESS_REVIEW.md
docs/SOP/: LESSONS.md  SOP.md
engineering-reference/: Calibre_44_Bushing_System_RevA.md  Calibre_44_Case_Bracelet_Spec_RevA.md  Calibre_44_Crown_Keyless_MotionWorks_RevA.md  Calibre_44_Final_Open_Items_CLOSED.md  Calibre_44_Pivot_Map.jsx  Calibre_44_RevJ1_LOCKED.md  Calibre_44_Sourcing_Calculations_RevA.md  Calibre_44_Winding_System_RevA.md  README.md
site/: almanac.html  apothecary.html  ask.html  audit.html  bible.html  boundary.html  brain.html  characters.html  check.html  codex.html  collapse.html  community.html  companion.html  connect.html  corrected.html  days.html  encyclopedia.html  floor.html  gate.js  graph.js  guarantees.html  index.html  journal.html  keep.html  kinds.js  library.html  llms.txt  map.html  nh-home.js  nh-tools.js  proof.html  prophecy.html  rampart-ml.js  read.html  reason.html  redact.js  robots.txt  seal.html  seeds.html  sitemap.xml  (+7 more)
site/.well-known/: mcp-registry-auth
src/concordance/: __init__.py  __main__.py  almanac.py  apothecary.py  ask.py  audit.py  badges.py  binding.py  bookofdays.py  branch.py  branding.py  canon.py  cas.py  characters.py  coach.py  codex.py  commentary.py  config.py  corpus.py  days.py  derivation.py  distill.py  engine.py  (+35 more)
tests/: MANIFEST.txt  conftest.py  test_api.py  test_apothecary.py  test_ask.py  test_attestation.py  test_audit.py  test_badges.py  test_benchmark.py  test_bible.py  test_binding.py  test_bookofdays.py  test_branch.py  test_canon_original.py  test_canonical.py  test_characters.py  test_coach.py  test_commentary.py  test_core.py  test_corpus.py  test_crossref.py  test_days.py  test_deck_api.py  test_distill.py  test_engine.py  test_find.py  test_floor.py  test_fp_gate.py  test_gate.py  test_gateway.py  test_graph.py  test_grid.py  test_grid_atlas.py  test_groups.py  test_growth.py  test_hardening.py  test_identity.py  test_inequality.py  test_inlet.py  test_integrity.py  (+44 more)
tools/: add_ras_bridge.py  backfill_reference_cards.py  backup.sh  benchmark.py  bridge_reference_to_scripture.py  build_geo.py  check.py  demote_cites.py  grow.py  integrity_check.py  mention_web.py  migrate_bible.py  migrate_cards.py  migrate_characters.py  migrate_commentary.py  migrate_prophecy.py  migrate_school.py  migrate_strongs.py  migrate_xrefs.py  nest_the_floor.py  quickstart.sh  recite.py  seed_keystones.py  serve_local.py  theory_tensor.py  traffic_rollup.py  vendor_rampart.sh
(+81 files in other folders)
