[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concordance"
version = "2.0.0a0"
description = "A deterministic verification engine — a verdict, the worked reasoning, and a re-checkable seal."
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
# Sovereign: the core hot path is stdlib-only. Heavy deps are optional and lazy-loaded,
# pulled in ONLY when a math/physics/stats claim actually needs them.
dependencies = []

[project.optional-dependencies]
math = ["sympy", "scipy", "numpy"]
signing = ["cryptography"]      # Ed25519 seal attestations (optional, lazy)
schema = ["jsonschema"]         # full packet validation; without it, the sovereign structural fallback runs
web = ["fastapi", "uvicorn"]
dev = ["pytest", "coverage"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
concordance = ["schema/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
