[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concordance"
version = "2.0.0a0"
description = "A deterministic verification engine — a verdict, the worked reasoning, and a re-checkable seal."
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
# Sovereign: ZERO required dependencies — the engine imports, serves, seals, and keeps the
# corpus on the stdlib alone. Heavy deps are optional + lazy-loaded. NOTE: the derivation
# MOAT (math/physics/stats verification) needs the `math` extra (sympy/scipy/numpy); without
# it those verifiers return NOT_APPLICABLE/ERROR — never a false HOLDS — but also can't
# confirm math. Install `.[math]` for the full moat. The claim is "no required deps," not
# "the moat runs on the stdlib."
dependencies = []

[project.optional-dependencies]
math = ["sympy", "scipy", "numpy"]
signing = ["cryptography"]      # Ed25519 seal attestations (optional, lazy)
schema = ["jsonschema"]         # full packet validation; without it, the sovereign structural fallback runs
web = ["fastapi", "uvicorn"]
dev = ["pytest>=8", "coverage>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
concordance = ["schema/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/concordance"]
branch = true
